# GLiNER_Finetuning

./: .gitattributes  .gitignore  Makefile  README.md  requirements.txt  valid.jsonl
config/: labels.json
configs/: config.yaml
data/: raw_sentences.txt  train.jsonl  valid.jsonl
data/dicts/: location_city.txt  location_country.txt  org_suffix.txt
docs/: data_contract.md  model_analysis.md
onnx/: README.md  export_gliner_to_onnx.py  export_manifest.json  gliner_config.json  labels.json  model.onnx  parity_test.py
onnx/cpp/: CMakeLists.txt  build_windows.ps1  vcpkg.json
onnx/cpp/include/: gliner_tizen_infer.hpp
onnx/cpp/src/: gliner_tizen_infer.cpp  main.cpp
outputs/: run2_eval.out  run2_eval_t08.out  run2_predict_sample.out  run2_predict_sample_t08.err  run2_predict_sample_t08.out  tmp_startproc_test.out
outputs/run1/checkpoint-epoch2/: gliner_config.json
outputs/run2/checkpoint-epoch3/: tokenizer_config.json
outputs/run2/final/: run_config.json
scripts/: auto_label_ko.py  auto_tag_gliner.py  build_news_corpus.py  check_data.py  convert_to_gliner.py  convert_xlsx_to_txt.py  run_pipeline.py  train_gliner.py  validate_tagged_data.py
scripts/data/: dataset_sentences.xlsx
src/: dataio.py  eval.py  labels.py  predict.py  train.py
